# vial-reverb

./: .gitignore  CMakeLists.txt  PLAN.md  README.md
doc/: 01-architecture-overview.md  02-dsp-engine.md  03-parameters.md  04-build-system.md  05-testing.md  06-ui-architecture.md  07-unrelated-code.md  08-quick-reference.md
scripts/: generate_params.js
src/dsp/: ReverbEngine.cpp  ReverbEngine.h  ReverbParameters.h
src/dsp/vial/common/: synth_constants.h
src/dsp/vial/effects/: reverb.cpp  reverb.h
src/dsp/vial/filters/: one_pole_filter.h
src/dsp/vial/framework/: circular_queue.h  common.h  feedback.cpp  feedback.h  futils.h  matrix.h  operators.cpp  operators.h  poly_utils.h  poly_values.h  processor.cpp  processor.h  processor_router.cpp  processor_router.h  utils.cpp  utils.h  value.cpp  value.h
src/dsp/vial/lookups/: memory.h
src/plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
tests/: TestMain.cpp
ui/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/e2e/: ui.spec.ts
ui/src/: App.tsx  hooks.ts  main.tsx  params.ts  styles.css  theme.ts
ui/src/components/: Knob.tsx  Panel.tsx  ParamSlider.tsx  SubPanel.tsx  Visualizers.tsx
ui/src/juce/: index.d.ts  mock.ts
ui/src/test/: App.test.tsx  params.test.ts  setup.ts
